Polishing my technologies

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <div class="small-divider"></div>
         <div class="contact-text">Thank you for your interest! Please fill out the form below if you would like to work together.</div>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form"><input type="text" id="name" name="name" data-name="Name" placeholder="Enter your name" maxlength="256" class="text-field w-input"><input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="text-field w-input"><textarea id="Project-details" name="Project-details" placeholder="What are your project details..." maxlength="5000" data-name="Project details" class="text-field text-area w-input"></textarea><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></form>
+          <form id="email-form" name="email-form" data-name="Email Form"><input type="text" id="name" name="name" data-name="Name" placeholder="Enter your name" maxlength="256" class="text-field w-input"><input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="text-field w-input"><textarea id="Project-details" name="Project-details" placeholder="Leave me a brief message..." maxlength="5000" data-name="Project details" class="text-field text-area w-input"></textarea><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></form>
           <div class="success-message w-form-done">
             <p class="success-text">Thank you! Your submission has been received!</p>
           </div>
@@ -49,7 +49,7 @@
       </div>
     </div>
     <h1 data-ix="hero-text" class="home-page-heading">I&#x27;m so glad you got it here!</h1>
-    <div class="hero-overlay">dddd</div>
+    <div class="hero-overlay"></div>
   </div>
   <div class="section top-section home-page">
     <div class="hero-container w-container">
@@ -67,9 +67,6 @@
             <div class="w-dyn-items">
               <div class="w-dyn-item">
                 <div class="tile-text">MY<br>Projects</div><a href="portfolio.html" class="tile-link tile-image w-inline-block"></a></div>
-            </div>
-            <div class="w-dyn-empty">
-              <p>No items found.</p>
             </div>
           </div>
         </div>
