--- a/info.html
+++ b/info.html
@@ -54,16 +54,17 @@
     </div>
     <h1>Technology</h1>
     <div class="hero-overlay">
-      <div class="hero-overlay">dddd</div>
-      <div class="hero-overlay">dddd</div>
+      <div class="hero-overlay"></div>
+      <div class="hero-overlay"></div>
     </div>
+
   </div>
   <div class="section">
     <div class="w-container">
       <div class="w-dyn-list">
         <div class="collection-list w-dyn-items w-row">
           <div class="blog-block w-dyn-item w-col w-col-4">
-            <a href="#" data-ix="blog-link" class="project-link blog-link w-inline-block">
+            <a href="https://reactjs.org/" data-ix="blog-link" class="project-link blog-link w-inline-block">
               <div class="blog-image-wrapper">
                 <div class="blog-date"></div>
                 <div class="blog-category"></div>
@@ -72,15 +73,13 @@
               <div class="blog-title">REACT.js</div>
               <div class="blog-description"></div>
               <div>
-                <div class="blog-author">Written by</div>
+                <div class="blog-author">Learn about Facebook most important technology</div>
                 <div class="blog-author"></div>
               </div>
             </a>
           </div>
         </div>
-        <div class="w-dyn-empty">
-          <p>No items found.</p>
-        </div>
+    <!--  -->
       </div>
     </div>
   </div>
