--- a/portfolio.html
+++ b/portfolio.html
@@ -29,7 +29,7 @@
         <div class="small-divider"></div>
         <div class="contact-text">Thank you for your interest! Please fill out the form below if you would like to work together.</div>
         <div class="w-form">
-          <form id="email-form" name="email-form" data-name="Email Form"><input type="text" id="name" name="name" data-name="Name" placeholder="Enter your name" maxlength="256" class="text-field w-input"><input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="text-field w-input"><textarea id="Project-details" name="Project-details" placeholder="What are your project details..." maxlength="5000" data-name="Project details" class="text-field text-area w-input"></textarea><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></form>
+          <form id="email-form" name="email-form" data-name="Email Form"><input type="text" id="name" name="name" data-name="Name" placeholder="Enter your name" maxlength="256" class="text-field w-input"><input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="text-field w-input"><textarea id="Project-details" name="Project-details" placeholder="Leave me a brief message..." maxlength="5000" data-name="Project details" class="text-field text-area w-input"></textarea><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></form>
           <div class="success-message w-form-done">
             <p class="success-text">Thank you! Your submission has been received!</p>
           </div>
@@ -53,7 +53,7 @@
       </div>
     </div>
     <h1>My  Portfolio</h1>
-    <div class="hero-overlay">dddd</div>
+    <div class="hero-overlay"></div>
   </div>
   <h1 data-w-id="2a5ed2c5-5e1f-66c4-c800-9bb38a7a3020" style="opacity:0" class="heading-4 heading-5">Let&#x27;s go! Take a quick look</h1>
   <div class="container w-container">
