--- a/portfolio.html
+++ b/portfolio.html
@@ -20,6 +20,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="images/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="images/webclip.png" rel="apple-touch-icon">
+
 </head>
 <body>
   <div class="contact-overlay">
@@ -27,7 +28,7 @@
       <div class="form-wrapper">
         <div class="contact-heading">Get in Touch</div>
         <div class="small-divider"></div>
-        <div class="contact-text">Thank you for your interest! Please fill out the form below if you would like to work together.</div>
+        <div class="contact-text">Thanks you for your interest! Please fill out the form below if you would like to work together.</div>
         <div class="w-form">
           <form id="email-form" name="email-form" data-name="Email Form"><input type="text" id="name" name="name" data-name="Name" placeholder="Enter your name" maxlength="256" class="text-field w-input"><input type="email" id="email" name="email" data-name="Email" placeholder="Enter your email address" maxlength="256" required="" class="text-field w-input"><textarea id="Project-details" name="Project-details" placeholder="Leave me a brief message..." maxlength="5000" data-name="Project details" class="text-field text-area w-input"></textarea><input type="submit" value="Send" data-wait="Please wait..." class="submit-button w-button"></form>
           <div class="success-message w-form-done">
@@ -58,7 +59,7 @@
   <h1 data-w-id="2a5ed2c5-5e1f-66c4-c800-9bb38a7a3020" style="opacity:0" class="heading-4 heading-5">Let&#x27;s go! Take a quick look</h1>
   <div class="container w-container">
     <div class="w-row">
-      <div class="column-2 w-col w-col-4"><img src="images/bountyHunter.jpg" width="300" height="200" srcset="images/bountyHunter-p-500.jpeg 500w, images/bountyHunter-p-1080.jpeg 1080w, images/bountyHunter-p-1600.jpeg 1600w, images/bountyHunter.jpg 1920w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 299.9999694824219px, (max-width: 991px) 229.33123779296875px, 299.9999694824219px" data-w-id="fbd778f6-d647-5ad2-c5c8-5f2a627993a6" alt="" class="image-21"><a href="https://ucf-pr3.herokuapp.com/" target="_blank" class="link-block w-inline-block"></a></div>
+      <div class="column-2 w-col w-col-4"><img src="images/bountyHunter.jpg" width="300" height="200" srcset="images/bountyHunter-p-500.jpeg 500w, images/bountyHunter-p-1080.jpeg 1080w, images/bountyHunter-p-1600.jpeg 1600w, images/bountyHunter.jpg 1920w" sizes="(max-width: 479px) 92vw, (max-width: 767px) 299.9999694824219px, (max-width: 991px) 229.33123779296875px, 299.9999694824219px" data-w-id="fbd778f6-d647-5ad2-c5c8-5f2a627993a6" alt="" class="image-21" class="tile-image"><a href="https://ucf-pr3.herokuapp.com/" target="_blank" class="link-block w-inline-block"></a></div>
       <div class="column-3 w-col w-col-4"><img src="images/cards-casino-chance-chip-269630.jpg" width="300" height="200" srcset="images/cards-casino-chance-chip-269630-p-500.jpeg 500w, images/cards-casino-chance-chip-269630-p-1080.jpeg 1080w, images/cards-casino-chance-chip-269630-p-1600.jpeg 1600w, images/cards-casino-chance-chip-269630.jpg 1920w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 299.9999694824219px, (max-width: 991px) 249.31874084472656px, 299.9999694824219px" alt="" class="tile-image"><a href="https://aqueous-reaches-91017.herokuapp.com/" target="_blank" class="link-block w-inline-block"></a></div>
       <div class="column-4 w-col w-col-4"><img src="images/focus-photo-of-super-mario-luigi-and-yoshi-figurines-163036.jpg" width="300" height="200" srcset="images/focus-photo-of-super-mario-luigi-and-yoshi-figurines-163036-p-800.jpeg 800w, images/focus-photo-of-super-mario-luigi-and-yoshi-figurines-163036-p-1600.jpeg 1600w, images/focus-photo-of-super-mario-luigi-and-yoshi-figurines-163036.jpg 1920w" sizes="(max-width: 479px) 100vw, (max-width: 767px) 299.9999694824219px, (max-width: 991px) 249.31874084472656px, 299.9999694824219px" alt="" class="tile-image"><a href="https://marciagzq.github.io/Smash-Brawl/" target="_blank" class="link-block w-inline-block"></a></div>
     </div>
